fix edit-dialog overflow

--- a/app/assets/stylesheets/specific/custom.scss
+++ b/app/assets/stylesheets/specific/custom.scss
@@ -46,7 +46,8 @@ div.ui-dialog-titlebar {
 
 .bootstrap-tagsinput {
 	height:10em;
-	width:100%
+	width:100%;
+	overflow-y: scroll;
 }
 
 .bootstrap-tagsinput input {
